--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lottiefiles/lottie-player": "^2.0.12",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.10",
@@ -25,7 +26,6 @@
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "react-lottie": "^1.2.10",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
     "sweetalert2": "^11.22.0",
